# zania_assignment

./: .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  dependencies.py
lib/: __init__.py  llm.py  parse_json.py  parse_pdf.py
